Bug 84281 - Assertion failure in sna_mode_discover.
Summary: Assertion failure in sna_mode_discover.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-24 14:03 UTC by Nick Bowler
Modified: 2014-09-29 13:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (32.77 KB, text/plain)
2014-09-24 14:03 UTC, Nick Bowler
no flags Details

Description Nick Bowler 2014-09-24 14:03:42 UTC
Created attachment 106792 [details]
Xorg.0.log

Hi,

Yesterday I tried the latest git xf86-video-intel (376037e6336d).

There were no problems yesterday.  When I came in this morning the server was dead, with the following message:

  sna_mode_discover:3978 assertion 'sna->mode.num_real_crtc == res.count_crtcs' failed

I'm not sure if it's reproducible (yet) but I'll attach the log in case it's something obvious.

xserver 1.16.0.901
Linux 3.15.5
libdrm 2.4.54
Comment 1 Chris Wilson 2014-09-24 14:52:37 UTC
Oh, Zaphod!
Comment 2 Chris Wilson 2014-09-24 14:58:16 UTC
commit a60ccd546e081f5b7bd7de762e1638927a4145a2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 24 15:55:11 2014 +0100

    sna: Relax constant numCrtcs assertion when ZaphodHeads is active
    
    If ZaphodHeads is active, each screen only has a subset of the CRTC
    assigned to it, in fact just the single CRTC associated with the pipe of
    that screen. In that case, we only expect to have the single CRTC and so
    should not assert that we have a list of all CRTCS.
    
    It should still hold that we dynamically attach ZaphodHeads upon
    hotplugging, so it is just the assert that is overzealous.
    
    Reported-by: Nick Bowler <nbowler@draconx.ca>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=84281
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Nick Bowler 2014-09-29 13:40:05 UTC
(In reply to comment #1)
> Oh, Zaphod!

I try my best to break things :)

Anyway, seems to be fixed now, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.